Fixed footer, hanged color, fixed aligning of logos, added boxes around projects

--- a/portfolio-projects.css
+++ b/portfolio-projects.css
@@ -13,7 +13,7 @@
 }
 
 .portfolio-headline-box {
-    background-color: #667C26;
+    background-color: #312C54;
     width: 100vw;
     font-weight: 600;
     font-size: 1em;
@@ -40,13 +40,15 @@
 }
 
 .portfolio-list a{
+    border-style: solid;
     display: flex;
     flex-direction:row;
     color: inherit;
     text-decoration: none;
-    padding: 2rem;
-    border-radius: 10%;
-    border-color: #667C26;
+    padding: 1rem;
+    margin: 2rem;
+    border-radius: 20%;
+    border-color: black;
    
 }
 
