--- a/skills.css
+++ b/skills.css
@@ -13,7 +13,7 @@
 }
 
 .skills-headline-box {
-    background-color: #667C26;
+    background-color: #312C54;
     width: 100vw;
     font-weight: 600;
     font-size: 1em;
@@ -26,7 +26,47 @@
     line-height: 50px;
 }
 
+
 .skills-logos ul{
+    max-width: 900px;
+    max-height: 400px;
+    column-count: 5;
+    /*display: inline-block;*/
+    margin-bottom: 2rem;
+    list-style: none;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills-logos a{
+    display: inline-block;
+    padding: 2rem;
+   
+}
+.skills-logos img{
+    max-height: 100px;
+    max-width: 100px;
+   
+}
+
+.footer-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.footer-text {
+    font-family: Andada Pro, sans-serif;
+    max-width: 1000px;
+    text-align: center;
+    padding: 40px 40px;
+
+}
+
+.contact-logos-bottom ul{
     display: flex;
     margin-bottom: 4rem;
     padding: 0;
@@ -36,13 +76,11 @@
     justify-content: space-between;
 }
 
-.skills-logos a{
-    color: inherit;
-    text-decoration: none;
+.contact-logos-bottom a{
     padding: 2rem;
    
 }
-.skills-logos img{
+.contact-logos-bottom a img{
     max-height: 50px;
     max-width: 50px;
    
